...
            android:gravity="center|bottom"
            android:paddingBottom="20dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/factsBackButton"
                android:text="Back" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
